<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/mix"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hallo"
            android:textSize="35sp"
            android:fontFamily="@font/chelsea_market"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salam_sehat"
        android:textSize="25sp"
        android:fontFamily="@font/chelsea_market"
        android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintHeight_percent=".6"
        app:layout_constraintVertical_bias=".1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kalkulator_imt"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/chelsea_market"
                    style="@android:style/TextAppearance.Material.Headline"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tinggi"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/salsa"
                        style="@android:style/TextAppearance.Material.Body1"/>

                    <NumberPicker
                        android:id="@+id/heightPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.Material3.Dark"
                        android:outlineSpotShadowColor="@color/white"
                        android:outlineAmbientShadowColor="@color/white"
                        android:layout_marginHorizontal="5dp"/>

                    <TextView
                        style="@android:style/TextAppearance.Material.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/salsa"
                        android:text="cm"
                        android:textColor="@color/white" />

                    <TextView
                        style="@android:style/TextAppearance.Material.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/salsa"
                        android:text="Berat"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <NumberPicker
                        android:id="@+id/weightPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.Material3.Dark"
                        android:outlineSpotShadowColor="@color/white"
                        android:outlineAmbientShadowColor="@color/white"
                        android:layout_marginHorizontal="5dp"/>

                    <TextView
                        style="@android:style/TextAppearance.Material.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/salsa"
                        android:text="kg"
                        android:textColor="@color/white" />

                </LinearLayout>

                <TextView
                    android:id="@+id/resultsTV"
                    style="@android:style/TextAppearance.Material.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/salsa"
                    android:padding="3dp"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/healthyTV"
                    style="@android:style/TextAppearance.Material.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:fontFamily="@font/salsa"
                    android:padding="1dp"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardReproduksi"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="1dp"
            app:cardElevation="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/imprima"
                    android:gravity="center"
                    android:text="Kesehatan Reproduksi"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/tuba" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardGizi"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="1dp"
            app:cardElevation="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/imprima"
                    android:gravity="center"
                    android:text="Gizi &amp; Makan Seimbang"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/gizi" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardVideo"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="1dp"
            app:cardElevation="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/imprima"
                    android:gravity="center"
                    android:text="Video Edukasi (Sumber YouTube: Guru IPA)"
                    android:textColor="@color/white"
                    android:textSize="10.80dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="57dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/video" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardChat"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="1dp"
            app:cardElevation="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/imprima"
                    android:gravity="center"
                    android:text="Chat"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/chat" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardFaq"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="1dp"
            app:cardElevation="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/imprima"
                    android:gravity="center"
                    android:text="FAQ"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/faq" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardInfo"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="1dp"
            app:cardElevation="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/imprima"
                    android:gravity="center"
                    android:text="Info"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/info" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ImageView
        android:id="@+id/btnLogout"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:clickable="true"
        android:contentDescription="@string/btnLogout"
        android:focusable="true"
        android:src="@drawable/exit"/>

</LinearLayout>